<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".TransportActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <RadioGroup
            android:id="@+id/dayRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/routeRadioGroup"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/optionsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/options"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/weekDayRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/weekday" />

            <RadioButton
                android:id="@+id/saturdayRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saturday" />

            <RadioButton
                android:id="@+id/sundayRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sunday" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/routeRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tramStopRadioGroup"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dayRadioGroup"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/route"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16" />

            <RadioButton
                android:id="@+id/radioButton16A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_16a"
                android:checked="true"/>

        </RadioGroup>


        <RadioGroup
            android:id="@+id/tramStopRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/dayRadioGroup"
            app:layout_constraintTop_toBottomOf="@+id/routeRadioGroup">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stop"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/hydrRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/hydropark" />

            <RadioButton
                android:id="@+id/saltRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/saltovska" />

        </RadioGroup>


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <AutoCompleteTextView
            android:maxLines="1"
            android:id="@+id/autoTextView"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/applyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Подтвердить"
            android:textSize="12sp" />
    </androidx.appcompat.widget.LinearLayoutCompat>


    <TextView
        android:id="@+id/station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/station"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/nearestTram"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/the_nearest_tram"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="120">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal" />

    </ScrollView>

</LinearLayout>